--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,16 @@ h5 {
 }
 
 
+/* CONTENEDOR BASICO */
+
+.container {
+    display: block;
+    width: 85%;
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
+
 /* TABLAS campos de tabla */
 
 .responsive-table {
@@ -163,23 +173,60 @@ th {
     background: red;
 }
 
+
+/* FORMULARIOS INPUTS SELECT ESTILOS*/
+
+.flexRow {
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+}
+
 input,
 select {
     border: none;
     background: #ECECEC;
     padding: 10px;
     border-radius: 3px;
-    margin-bottom: 15px;
-    width: 45%;
 }
 
-.inputError {
+.formData {
+    width: 49%;
+    position: relative;
+    padding: 10px;
+}
+
+.formData input,
+select {
+    width: 100%;
+}
+
+.formData small {
+    position: absolute;
+    right: 10px;
+    margin-top: 0px;
+}
+
+.formData .error {
+    color: rgb(206, 11, 11);
+}
+
+.formData .validate {
+    background: rgb(0, 172, 43);
+}
+
+.formData .inputError {
     background: rgb(243, 147, 147);
 }
 
-.inputValidate {
-    background: rgb(167, 248, 187);
+.formData .inputValidate {
+    background: rgb(175, 255, 195);
 }
+
+
+/* cartas con entrada SLIDER */
 
 .cardSpace {
     height: 100vh;
@@ -292,7 +339,7 @@ select {
     width: 24%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
     .l9 {
         width: 100%;
     }
@@ -304,6 +351,15 @@ select {
     }
     .l3 {
         width: 49%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .l4 {
+        width: 100%;
+    }
+    .l3 {
+        width: 100%;
     }
 }
 
