--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -20,7 +20,7 @@
                      -->
 
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Nombre Completo:</label><br>
                         <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keydown)="nameUppercase()" (keypress)="uniqueNameWriting()" [ngClass]="{ 'inputError': validations.name > 0, 'inputValidate': validations.name < 0 }">
                         <small class="error" *ngIf="validations.name == 1">Se requiere el nombre</small>
@@ -29,14 +29,14 @@
                     </div>
 
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Correo:</label><br>
                         <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keydown)="mailUpper()" (keypress)="uniqueEmailWriting()" [ngClass]="{ 'inputError': validations.email > 0, 'inputValidate': validations.email < 0 }">
                         <small class="error" *ngIf="validations.email == 1">Correo Requerido</small>
                         <small class="error" *ngIf="validations.email == 2">Correo ya asignado</small>
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Tipo de usuario:</label><br>
                         <select [(ngModel)]="user.user_type_id" name="user_type_id">
                             <option value="1">Alumno</option> 
@@ -48,7 +48,7 @@
                     </select>
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Genero:</label><br>
                         <select [(ngModel)]="user.gender" name="gender">
                             <option value="1">Masculino</option> 
@@ -56,29 +56,29 @@
                         </select>
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Telefono:</label><br>
                         <input [(ngModel)]="user.phone" name="phone" type="tel" placeholder="Telefono">
                     </div>
 
 
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Fecha de nacimiento:</label><br>
                         <input [(ngModel)]="user.birthday" name="birthday" type="date" placeholder="Cumpleanos">
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Lugar de nacimiento:</label><br>
                         <input [(ngModel)]="user.placeBirth" name="placeBirth" type="text" placeholder="Lugar de nacimiento" (keydown)="placeUpper()">
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>CURP:</label><br>
                         <input [(ngModel)]="user.curp" name="curp" type="text" placeholder="Curp" (keydown)="curpUpper()">
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Seguro Medico:</label><br>
                         <input [(ngModel)]="user.insurance" name="insurance" type="text" placeholder="Seguro social" (keydown)="seguroUpper()">
                     </div>
@@ -88,7 +88,7 @@
                         <input #fileInput class="fileInput" id="fileInput" name="fileInput" type="file" accept="image/x-png,image/gif,image/jpeg">
                     </div> -->
 
-                    <div class="formData l6" *ngIf="user.user_type_id > 2">
+                    <div class="formData l6 m6" *ngIf="user.user_type_id > 2">
                         <label>Contraseña:</label><br>
                         <input [(ngModel)]="user.password" name="password" placeholder="Contraseña" type="password" [ngClass]="{ inputError: validations.password > 0 }">
                         <small class="error" *ngIf="validations.password == 1">Se requiere el Correo/Telefono</small>
@@ -99,45 +99,45 @@
 
 
 
-                <div class="flexRow l6">
+                <div class="flexRow l6 ">
                     <h2 class="l12">Direccion</h2>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Calle:</label><br>
                         <input [(ngModel)]="user.street" name="street" type="text" placeholder="Calle" (keydown)="streetUpper()">
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Numero de casa:</label><br>
                         <input [(ngModel)]="user.hauseNumber" name="hauseNumber" type="number" placeholder="Numero de casa"><br>
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Colonia:</label><br>
                         <input [(ngModel)]="user.colony" name="colony" type="text" placeholder="Colonia" (keydown)="colonyUpper()">
                     </div>
 
-                    <div class="formData l6">
+                    <div class="formData l6 m6">
                         <label>Ciudad:</label><br>
                         <input [(ngModel)]="user.city" name="city" type="text" placeholder="Ciudad" (keydown)="cityUpper()"><br>
                     </div>
 
 
-                    <div *ngIf="user.user_type_id == 2 || user.user_type_id == 3">
-                        <h2>Salario</h2>
-                        <div class="formData l6">
+                    <div class="flexRow l12" *ngIf="user.user_type_id == 2 || user.user_type_id == 3">
+                        <h2 class="l12">Salario</h2>
+                        <div class="formData l6 m6">
                             <label> Monto:</label><br>
                             <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ 'inputError': validations.salaryAmount == 1}">
                             <small class="error" *ngIf="validations.salaryAmount == 1">Requerido</small>
                         </div>
 
 
-                        <div class="formData l6">
+                        <div class="formData l6 m6">
                             <label>Bono:</label><br>
                             <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono">
                         </div>
 
-                        <div class="formData l6">
+                        <div class="formData l6 m6">
                             <label>Tipo de Salario:</label>
                             <select [(ngModel)]="salary.salary_type_id" name="salary_type_id">
                                 <option value="1">Hora</option>
@@ -147,9 +147,9 @@
 
                     </div>
 
-                    <div *ngIf="user.user_type_id == 1 ">
-                        <h2>Pago Mensual</h2>
-                        <div class="formData l6">
+                    <div class="flexRow l12" *ngIf="user.user_type_id == 1 ">
+                        <h2 class="l12">Pago Mensual</h2>
+                        <div class="formData l6 m6">
                             <label>Monto:</label><br>
                             <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" min="0" placehoder="Monto" [ngClass]="{ 'inputError': validations.monthlyPaymentAmount > 0 }">
                             <small class="error" *ngIf="validations.monthlyPaymentAmount > 0">Requerido</small>
