--- a/src/app/user/create-user/reference/reference.component.html
+++ b/src/app/user/create-user/reference/reference.component.html
@@ -41,7 +41,7 @@
                 <small class="error" *ngIf="validations.email == 2">Formato incorrecto "@" / "."</small>
             </div>
 
-            <button class="btn l12" type="submit">Aceptar</button>
+            <button class="btn btnPrimary l12" type="submit">Aceptar</button>
 
         </form>
 
