--- a/src/styles.css
+++ b/src/styles.css
@@ -163,14 +163,20 @@ th {
     transition: .45s;
     border: none;
     cursor: pointer;
+    margin-top: 20px;
 }
 
-.btn:focus {
-    background: red;
+.btn:focus {}
+
+.btn:hover {}
+
+.btnPrimary {
+    background: #3679e4
 }
 
-.btn:hover {
-    background: red;
+.btnPrimary:hover,
+.btnPrimary:focus {
+    background: #004fcf
 }
 
 
